--- a/style.css
+++ b/style.css
@@ -7,5 +7,10 @@ h{
   color: black;
   font-size: 36px;
   text-align: center;
-
 }
+
+<u1> {
+  	color: blue;
+  	font-size: 20px;
+  	text-align: center;
+  }
