--- a/style.css
+++ b/style.css
@@ -1,27 +1,17 @@
 
 <title>Adam Wood's Website</title>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
-<link rel="stylesheet" type="text/css" href="style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylsheet" media="(max-width: 800px)" href="example.css"
 <title> Adam Wood's Website </title>
 <head>
-<link rel-"stylesheet"
-hrfe="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-<script
-src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
-</script>
-
-<script
-src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
-</script>
 
 <style>
 @media (max-width:600px){
 
 }
-<div class="container-fluid">
+/*<div class="container-fluid">
 	<div class="row">
 		<div class="col-md-1">.col-md-1</div>
 		<div class="col-md-1">.col-md-1</div>
@@ -48,7 +38,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 	<div class="row"
 		<div class="col-md-6">.col-md-6</div>
 		<div class="col-md-6">.col-md-6</div>
-	body<>
+*/	body<>
 border: 1px solid #222;
 background: #fff;
 body</>
