--- a/style.css
+++ b/style.css
@@ -1,93 +1,14 @@
-
-<title>Adam Wood's Website</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylsheet" media="(max-width: 800px)" href="example.css"
-<title> Adam Wood's Website </title>
-<head>
-
-
-<style>
-@media (max-width:600px){
-
-}
-/*<div class="container-fluid">
-	<div class="row">
-		<div class="col-md-1">.col-md-1</div>
-		<div class="col-md-1">.col-md-1</div>
-		<div class="col-md-1">.col-md-1</div>
-		<div class="col-md-1">.col-md-1</div>
-		<div class="col-md-1">.col-md-1</div>
-		<div class="col-md-1">.col-md-1</div>
-		<div class="col-md-1">.col-md-1</div>
-		<div class="col-md-1">.col-md-1</div>
-		<div class="col-md-1">.col-md-1</div>
-		<div class="col-md-1">.col-md-1</div>
-		<div class="col-md-1">.col-md-1</div>
-		<div class="col-md-1">.col-md-1</div>
-	</div>
-	<div class="row">
-		<div class="col-md-8">.cod-md-8</div>
-		<div class="col-md-4">.cod-md-4</div>
-	</div>
-	<div class="row">
-		<div class=col-md-4">.col-md-4</div>
-		<div class="col-md-4">.col-md-4</div>
-		<div class="col-md-4">.col-md-4</div>
-	</div>
-	<div class="row"
-		<div class="col-md-6">.col-md-6</div>
-		<div class="col-md-6">.col-md-6</div>
-*/	body<>
-*{
-	margin:0;
+body{
 	padding:0;
+	margin:0;
+	height:100%;
+	width:100%;
 }
-text{
-	fill:white;
-}
-#title-header {
-	font-family: 'Inconsolata', monospace;
-}
-.index-titles {
-	text-align: center;
-	font-size:100pt;
-	font-family: sans-serif;
-	font-weight: 250;
-}
-#intro-start{
-	padding: 200px 0px 125px 0px ;
-	text-align: center;
-}
-#intro{
-	height : 825px;
-	text-align: : center;
-}
-#subtitles{
-	position:relative;
-	margin-top: 50px;
-}
-
-border: 1px solid #222;
-background: #fff;
-body</>
-p {
-	color: #36566D;
-	font-size: 20px;
-	text-align: center;
+.intro{
+	position:absolute;
+	top:20%;
 }
 h1{
-  color: black;
-  font-size: 36px;
-  text-align: center;
+	text-align: center;
+	color: blue;
 }
-p2{
-	color: #36566D;
-	font-size: 20px;
-}
-
-u1 {
-  	color: #36566D;
-  	font-size: 20px;
-
-  }
