--- a/style.css
+++ b/style.css
@@ -1,18 +1,14 @@
-/*body{
-	padding:0;
-	margin:0;
-	height:100%;
-	width:100%;
-}
-.intro{
-	position:absolute;
-	top:20%;
+body{
+	background-size: auto;
+	background-image: url("http://giphy.com/gifs/26gJAFwg6xhrunlbu/html5");
 }
 h1{
+	font-family: cursive;
 	text-align: center;
-	color: blue;
+	font-size: 60px;
 }
 p{
-	color:blue;
+	font-family: sans-serif;
 	text-align: center;
-}*/
+	font-size: 30px;
+}
